--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <p>Growing orchids at your home in Utah is actually easier than you think. Follow the tips
       here, you will have orchids blooming for you year after year.</p>
     <ul>
-      <li>Summer: I water them with the tap water (like giving them them a good shower once a week.)</li>
+      <li>Summer: I water my orchids with the tap water over the sink really well (like giving them a good shower once a week.)</li>
       <li>Winter: Twice a week, I add two pieces ice-cubes to each pot at the top of the pot where the new roots are.
       </li>
       <li>If your orchid needs moisure, make sure you run the humidifier every other day.</li>
