--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -213,6 +214,9 @@
       </div>
       <div class="carousel-item">
         <img src="images/orchidshow6.jpg" class="rounded mx-auto d-block w-50" alt="...">
+      </div>
+        <div class="carousel-item">
+        <img src="images/orchidshow7.jpg" class="rounded mx-auto d-block w-50" alt="...">
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
